# efd-station

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DEV_GUIDE.md  PROGRESS.md  README.md  USER_GUIDE.md  rework-architecture.md
client/: Cargo.toml
client/examples/: ws_test.rs
client/src/: audio.rs  cat_commands.rs  main.rs  sdr_params.rs  ws.rs
client/src/ui/: controls.rs  gl_util.rs  mod.rs  spectrum.rs  waterfall.rs
crates/efd-audio/: Cargo.toml
crates/efd-audio/src/: alsa_out.rs  discover.rs  error.rs  file_source.rs  lib.rs  opus.rs  usb_rx.rs  usb_tx.rs
crates/efd-cat/: Cargo.toml
crates/efd-cat/src/: client.rs  discover.rs  error.rs  lib.rs  parse.rs  poll.rs  responder.rs  rigctld.rs  serial.rs
crates/efd-dsp/: Cargo.toml
crates/efd-dsp/src/: audio_dsp.rs  audio_if.rs  demod.rs  drm.rs  drm_file.rs  error.rs  fft.rs  filter.rs  lib.rs  nb.rs  window.rs
crates/efd-dsp/tests/: drm_integration.rs
crates/efd-iq/: Cargo.toml
crates/efd-iq/src/: backend.rs  device.rs  error.rs  lib.rs  source.rs  stream.rs  types.rs
crates/efd-iq/src/drivers/: fdm_duo.rs  mod.rs
crates/efd-proto/: Cargo.toml
crates/efd-proto/src/: downstream.rs  filters.rs  grid.rs  lib.rs  radio.rs  upstream.rs  wire.rs
docs/: CM5-sdr-backend-flowchart.drawio  CM5-sdr-backend-pipeline-AUD.drawio  CM5-sdr-backend-pipeline-FLAC-DRM.drawio  CM5-sdr-backend-pipeline-IQ-DRM.drawio  CM5-sdr-backend-pipeline-IQ-NO-DRM.drawio  CM5-sdr-backend-pipeline.drawio  CM5-sdr-backend.drawio  client-sdr-UI.drawio
scripts/: deploy.sh  migrate-service-to-mikel.sh  update-manjaro.sh  update-pi.sh
server/: Cargo.toml
server/debian/: efd-server.service  postinst
server/src/: config.rs  discovery.rs  drm_file_source.rs  main.rs  persistence.rs  pipeline.rs  recording.rs
server/src/ws/: downstream.rs  handler.rs  mod.rs  upstream.rs
