[package]
name = "efd-client"
version = "0.4.3"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
efd-proto = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = "0.28"
futures-util = "0.3"
gtk4 = { version = "0.9", features = ["v4_12"] }
glib = "0.20"
gl = "0.14"
libc = "0.2"
cpal = "0.15"
audiopus = "0.3.0-rc.0"
serde = { workspace = true }
toml = "0.8"
directories = "6"

[[example]]
name = "ws_test"
