[package]
name = "efd-server"
version = "0.9.0"
edition = "2021"
description = "SDR backend for the Elad FDM-DUO transceiver"
license = "GPL-3.0-or-later"
repository = "https://github.com/dielectric-coder/efd-station"

[dependencies]
efd-proto = { workspace = true }
efd-iq = { workspace = true }
efd-dsp = { workspace = true }
efd-audio = { workspace = true }
efd-cat = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
toml = "0.8"
directories = "6"

[package.metadata.deb]
maintainer = "dielectric-coder"
section = "hamradio"
priority = "optional"
depends = "libusb-1.0-0, libasound2, libopus0"
assets = [
    ["target/release/efd-server", "usr/bin/", "755"],
    ["../dist/config/config.toml", "etc/efd-backend/config.toml.example", "644"],
    ["../dist/udev/99-fdm-duo.rules", "lib/udev/rules.d/", "644"],
]
conf-files = ["/etc/efd-backend/config.toml.example"]
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]
unit-name = "efd-server"
enable = false
start = false
