[package]
name = "efd-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
efd-proto = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
nix = { version = "0.29", features = ["term", "fs", "poll"] }
